# monitoring-system

./: .gitignore  README.md  docker-compose.yaml  message_example.json
api/: Dockerfile
api/app/: database.py
db-writer/: Dockerfile  main.py  msqt_to_tsdb.py  requirements.txt
edge-client/c/: README.md  client.c  sensor.c
edge-client/python/: main.py  sensor_test.py
grafana/: grafana.ini
grafana/dashboards/: temperature_dashboard.json  weather_dashboard.json
grafana/provisioning/dashboards/: dashboard_1.json  default.yaml  default_dashboard.yaml
grafana/provisioning/datasources/: timescale_db.yaml
k8s/: db-writer-deployment.yaml  grafana-configmap.yaml  grafana-deployment.yaml  grafana-service.yaml  ingress.yaml  mosquitto-configmap.yaml  mosquitto-deployment.yaml  mosquitto-service.yaml  timescale-db-statefulset.yaml  web-deployment.yaml  web-service.yaml
mosquitto/: mosquitto.conf
nginx/: iot.conf
py-api/: Dockerfile  requirements.txt
py-api/app/: actions.py  database.py  main.py  models.py  schemas.py
py-client/: data_to_mosquitto.py
rs-client/: Cargo.toml  Dockerfile
rs-client/src/: main.rs
timescale-db/: create_grafana_user.sql  generate_data.sql  generate_dataset.sql  schema.sql  test_data.sql
web/: Dockerfile  package-lock.json  rollup.config.js
web-simple/: index.html  server.js
web/src/: App.svelte
